welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ';' expected but 'return' found.
    if (hour<7) || (hour>20) return talking} 
                             ^